--- a/graphics.css
+++ b/graphics.css
@@ -8,7 +8,7 @@
 
 .main{
     width: 100%;
-    background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 50%, rgba(0, 0, 0, 0.4) 50%), url('background pic.jpg');
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.4) 50%, rgba(0, 0, 0, 0.4) 50%), url('images/background pic.jpg');
     background-position:center;
     background-size: cover;
     height: 109vh;
